--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-/entorno
-
+# entorno virtual 
+/entorno #entorno 
+# Aqui se encuentran los archivos que trabaje con EDA
 /EDA
+# Aqui estan los archivos del proceso ETL
 /ETL
+# __pycache__
 /__pycache__
+# Aqui estan los archivos que trabaje para las funciones
 /Funcionesipy
 
