--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # entorno virtual 
-/entorno #entorno 
+/entorno 
 # Aqui se encuentran los archivos que trabaje con EDA
 /EDA
 # Aqui estan los archivos del proceso ETL
